Import of JJNAPIORK/Plack-Middleware-DBIC-QueryLog-0.02 from CPAN.
gitpan-cpan-distribution: Plack-Middleware-DBIC-QueryLog
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JJNAPIORK/Plack-Middleware-DBIC-QueryLog-0.02.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   Data::Dump: 0
   ExtUtils::MakeMaker: 6.42
   HTTP::Request::Common: 0
+  Plack::Middleware::Debug: 0
   Scalar::Util: 0
   Test::Fatal: 0
   Test::More: 0
@@ -31,4 +32,4 @@ resources:
   homepage: http://search.cpan.org/dist/Plack-Middleware-DBIC-QueryLog/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/jjn1056/Plack-Middleware-DBIC-QueryLog.git
-version: 0.01
+version: 0.02
