--- a/META.yml
+++ b/META.yml
@@ -28,8 +28,9 @@ requires:
   DBIx::Class::QueryLog: 1.3.0
   Moo: 0.009004
   Plack: 0.9957
+  perl: 5.8.8
 resources:
   homepage: http://search.cpan.org/dist/Plack-Middleware-DBIC-QueryLog/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/jjn1056/Plack-Middleware-DBIC-QueryLog.git
-version: 0.02
+version: 0.03
